fix: fix deck-section spacing

--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -3,12 +3,11 @@
   background-color: var(--darker-color);
   width: 100%;
   margin-top: auto; /* take available whitespace */
-  padding-bottom: 8px;
   display: flex;
   justify-content: center;
   gap: 12rem;
   align-items: center;
-  padding: 16px 12px;
+  padding: 12px 12px;
 }
 
 #footer-actions button {
@@ -24,7 +23,7 @@
   font-weight: bold;
   padding: 12px 20px;
   border-radius: 12px;
-  font-size: 1rem;
+  font-size: .9rem;
   border: none;
   color: var(--text-color);
   background: var(--secondary-color);
@@ -53,7 +52,7 @@
   font-weight: bold;
   padding: 12px 20px;
   border-radius: 12px;
-  font-size: 1rem;
+  font-size: .9rem;
   border: none;
   color: var(--text-color);
   background: var(--soft-pink);
